Fixed scrolling overflow; changed page title.

--- a/public/css/townhall.css
+++ b/public/css/townhall.css
@@ -125,6 +125,7 @@
 		height: 40px;
 		width:100%;
 		margin:0;
+		background-color:#00A3AD;
 	}
 
 	#entries #messageInput {
